# FIIT

./: .gitignore  FIIT UK studijny plan.xlsx  FIIT index 2019-20.xlsx  FIIT index.xlsx  FIIT studijny plan.xlsx  README.md  body2020.xlsx  body2021.xlsx  sablona_dokumentacia.docx  ~$body2020.xlsx
1_sem_ZS_2019-20/ZPRPR1/: online C compiler.url
2_sem_LS_2019-20/SEMAP1/: SEMAP_skuska.docx
2_sem_LS_2019-20/ZPS/: minutova_prezentacia.pptx  poznamky_na_skusku.docx
2_sem_LS_2019-20/ZTIAPL/: poznámky na zápočet.docx
3_sem_ZS_2020-21/ADM/: ADM-zoznam-SKUPIN.xlsx
3_sem_ZS_2020-21/PPI/: PPI_udalosti.xlsx  prednasky.txt
3_sem_ZS_2020-21/SEMAP2/: Omaľovánky-Emm.txt
4_sem_LS_2020-21/DSA/: ~$ skusku.docx
4_sem_LS_2020-21/FYZ/: ~$skusky.docx
4_sem_LS_2020-21/OOP/: skuska_machacova.docx
4_sem_LS_2020-21/TZIV/: Testy a skúšanie 2.html
5_sem_ZS_2021-22/OS/: Machacova_script7.sh  OS - pristupy na server.eml  xmachacova  xmachacova_key.ppk
5_sem_ZS_2021-22/PIKT/: kPrezentacii.docx  (+5 more)
DSA/: link.txt  ~WRL0582.tmp
INFO 4 - 1,2,3,4 semester/INFO 4 - 2. semester/ZTIA/ZTIA priklady/4_Events/gui_events/: CMakeLists.txt  events_glut.c  events_win32.c
IVZDEL DIGILAB/: 2_tema.ppt  klucove slova.txt  register repozitarov - DOAR.url  skuska ZS 2019-20.docx  ~$uska ZS 2019-20.docx
MATLOG/: Truth Table Generator.html
TZIV/: Mas-zaco-a-mam-rad-karamelovu.ram  Testy a skúšanie.html
ZMTMO/: CSS validation.txt
iné/: FIIT UK rozvrh 21-22.xlsx  FIIT UK studijny plan.xlsx  body2020.xlsx  body2021.xlsx  sablona_dokumentacia.docx
matfyz/: Moodle.url  Python Input.url
(+1183 files in other folders)
